--- a/SR.ModelImpl/Resources.resx
+++ b/SR.ModelImpl/Resources.resx
@@ -129,4 +129,7 @@
   <data name="PaperFormatNotFound" xml:space="preserve">
     <value>Paperformat '{0}' wasn't found.</value>
   </data>
+  <data name="UsernameOrPasswordIsEmpty" xml:space="preserve">
+    <value>Username or password is empty.</value>
+  </data>
 </root>
